src/test/ui/empty/empty-attributes.stderr
error: unused attribute
  --> $DIR/empty-attributes.rs:8:1
   |
LL | #[repr()]
   | ^^^^^^^^^ help: remove this attribute
   |
note: the lint level is defined here
  --> $DIR/empty-attributes.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^
   = note: attribute `repr` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:11:1
   |
LL | #[target_feature()]
   | ^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `target_feature` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:2:1
   |
LL | #![allow()]
   | ^^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `allow` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:3:1
   |
LL | #![warn()]
   | ^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `warn` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:4:1
   |
LL | #![deny()]
   | ^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `deny` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:5:1
   |
LL | #![forbid()]
   | ^^^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `forbid` with an empty list has no effect

error: unused attribute
  --> $DIR/empty-attributes.rs:6:1
   |
LL | #![feature()]
   | ^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: attribute `feature` with an empty list has no effect

error: aborting due to 7 previous errors

